--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -24,6 +24,7 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: npm run build
+    - run: node scripts/predeploy.js
     - run: |
         git remote set-url origin https://git:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
         npx gh-pages -d dist -u "github-actions-bot <support+actions@github.com>"
