--- a/package.json
+++ b/package.json
@@ -1,24 +1,40 @@
 {
-  "name": "iamandrewluca.github.io",
-  "version": "1.0.0",
-  "description": "",
-  "scripts": {
-    "build": "rm -rf dist && npx parcel build *.html",
-    "deploy": "npm run build && node scripts/predeploy.js && gh-pages -d dist"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/iamandrewluca/iamandrewluca.github.io.git"
-  },
-  "keywords": [],
-  "author": "Andrew Luca",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/iamandrewluca/iamandrewluca.github.io/issues"
-  },
-  "homepage": "https://github.com/iamandrewluca/iamandrewluca.github.io#readme",
-  "devDependencies": {
-    "gh-pages": "^3.2.3",
-    "parcel": "^2.0.1"
-  }
+	"name": "iles-app",
+	"version": "0.0.0",
+	"scripts": {
+		"dev": "iles dev --open",
+		"build": "iles build",
+		"preview": "iles preview --open --port 5050",
+		"typecheck": "vue-tsc --noEmit",
+		"prepare": "husky install"
+	},
+	"engines": {
+		"node": ">= 18.0.0",
+		"npm": ">= 8.0.0"
+	},
+	"dependencies": {
+		"@allindevelopers/prettier-config": "^1.0.0",
+		"@commitlint/cli": "^17.0.3",
+		"@commitlint/config-conventional": "^17.0.3",
+		"@islands/images": "^0.8.1",
+		"autoprefixer": "^10.4.7",
+		"gh-pages": "^4.0.0",
+		"husky": "^8.0.1",
+		"iles": "^0.8.0",
+		"lint-staged": "^13.0.3",
+		"postcss": "^8.4.14",
+		"prettier": "^2.7.1",
+		"prettier-plugin-tailwindcss": "^0.1.13",
+		"tailwindcss": "^3.1.6",
+		"typescript": "^4.5",
+		"vue-tsc": "^0.38"
+	},
+	"lint-staged": {
+		"*": "npx prettier --write --ignore-path .gitignore --ignore-unknown"
+	},
+	"commitlint": {
+		"extends": [
+			"@commitlint/config-conventional"
+		]
+	}
 }
