--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@commitlint/config-conventional": "^17.0.3",
 		"@islands/images": "^0.8.1",
 		"autoprefixer": "^10.4.7",
+		"critters": "^0.0.16",
 		"gh-pages": "^4.0.0",
 		"husky": "^8.0.1",
 		"iles": "^0.8.0",
