--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
 		"@commitlint/cli": "^17.6.5",
 		"@commitlint/config-conventional": "^17.6.5",
 		"@islands/images": "^0.8.2",
+		"@types/react": "^18.2.13",
+		"@types/react-dom": "^18.2.6",
 		"autoprefixer": "^10.4.14",
+		"cheerio": "^1.0.0-rc.12",
 		"critters": "^0.0.19",
 		"gh-pages": "^5.0.0",
 		"husky": "^8.0.3",
@@ -26,7 +29,11 @@
 		"postcss": "^8.4.24",
 		"prettier": "^2.8.8",
 		"prettier-plugin-tailwindcss": "^0.3.0",
+		"react": "^18.2.0",
+		"react-activity-calendar": "^2.0.2",
+		"react-dom": "^18.2.0",
 		"tailwindcss": "^3.3.2",
+		"tsx": "^3.12.7",
 		"typescript": "^5.1.3",
 		"vue-tsc": "^1.8.1"
 	},
