--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -4,6 +4,8 @@
 name: Node.js CI
 
 on:
+  schedule:
+    - cron: 0 0 * * *
   push:
     branches: [main]
 
@@ -22,6 +24,7 @@ jobs:
           node-version: 18.x
           cache: "npm"
       - run: npm ci
+      - run: npx tsx scripts/stats-fetch.ts
       - run: npm run build
       - run: |
           git remote set-url origin https://git:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
