chore: ignore data.json, generate at postinstall

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 		"build": "iles build",
 		"preview": "iles preview --open --port 5050",
 		"typecheck": "vue-tsc --noEmit",
-		"prepare": "husky install"
+		"prepare": "husky install",
+		"postinstall": "npx tsx scripts/stats-fetch.ts"
 	},
 	"engines": {
 		"node": ">= 18.0.0",
