--- a/package.json
+++ b/package.json
@@ -1,44 +1,40 @@
 {
-	"name": "iles-app",
-	"version": "0.0.0",
-	"scripts": {
-		"dev": "iles dev --open",
-		"build": "iles build",
-		"preview": "iles preview --open --port 5050",
-		"typecheck": "vue-tsc --noEmit",
-		"prepare": "husky install",
-		"postinstall": "npm run generate-empty-tailwind && npx tsx scripts/stats-fetch.ts",
-		"generate-empty-tailwind": "npx tailwindcss -c scripts/empty-tailwind.config.js -o ./public/contributions.css --minify"
-	},
+	"name": "iamandrewluca.github.io",
+	"type": "module",
+	"version": "0.0.1",
 	"engines": {
 		"node": ">= 18.0.0",
 		"npm": ">= 9.0.0"
 	},
+	"scripts": {
+		"dev": "astro dev",
+		"start": "astro dev",
+		"build": "astro check && tsc --noEmit && astro build",
+		"preview": "astro preview",
+		"astro": "astro",
+		"prepare": "husky install",
+		"postinstall": "patch-package; npx tsx scripts/extract-styles.ts; npx tsx scripts/stats-fetch.ts"
+	},
 	"dependencies": {
 		"@allindevelopers/prettier-config": "^1.0.0",
-		"@commitlint/cli": "^17.6.5",
-		"@commitlint/config-conventional": "^17.6.5",
-		"@islands/images": "^0.8.2",
-		"@types/react": "^18.2.13",
+		"@astrojs/react": "^2.2.1",
+		"@astrojs/tailwind": "^4.0.0",
+		"@commitlint/cli": "^17.6.6",
+		"@commitlint/config-conventional": "^17.6.6",
+		"@types/react": "^18.2.14",
 		"@types/react-dom": "^18.2.6",
-		"autoprefixer": "^10.4.14",
+		"astro": "^2.7.0",
 		"cheerio": "^1.0.0-rc.12",
-		"critters": "^0.0.19",
-		"gh-pages": "^5.0.0",
-		"happy-dom": "^9.20.3",
 		"husky": "^8.0.3",
-		"iles": "^0.9.5",
 		"lint-staged": "^13.2.2",
-		"postcss": "^8.4.24",
+		"patch-package": "^7.0.0",
 		"prettier": "^2.8.8",
 		"prettier-plugin-tailwindcss": "^0.3.0",
 		"react": "^18.2.0",
 		"react-activity-calendar": "^2.0.2",
 		"react-dom": "^18.2.0",
 		"tailwindcss": "^3.3.2",
-		"tsx": "^3.12.7",
-		"typescript": "^5.1.3",
-		"vue-tsc": "^1.8.1"
+		"tsx": "^3.12.7"
 	},
 	"lint-staged": {
 		"*": "npx prettier --write --ignore-path .gitignore --ignore-unknown"
