--- a/package.json
+++ b/package.json
@@ -17,13 +17,14 @@
 	},
 	"dependencies": {
 		"@allindevelopers/prettier-config": "^1.0.0",
+		"@astrojs/image": "^0.17.1",
 		"@astrojs/react": "^2.2.1",
 		"@astrojs/tailwind": "^4.0.0",
 		"@commitlint/cli": "^17.6.6",
 		"@commitlint/config-conventional": "^17.6.6",
 		"@types/react": "^18.2.14",
 		"@types/react-dom": "^18.2.6",
-		"astro": "^2.7.0",
+		"astro": "^2.7.1",
 		"cheerio": "^1.0.0-rc.12",
 		"husky": "^8.0.3",
 		"lint-staged": "^13.2.2",
