--- a/package.json
+++ b/package.json
@@ -17,25 +17,26 @@
 	},
 	"dependencies": {
 		"@allindevelopers/prettier-config": "^1.0.0",
-		"@astrojs/image": "^0.17.1",
-		"@astrojs/react": "^2.2.1",
-		"@astrojs/tailwind": "^4.0.0",
-		"@commitlint/cli": "^17.6.6",
-		"@commitlint/config-conventional": "^17.6.6",
-		"@types/react": "^18.2.14",
-		"@types/react-dom": "^18.2.6",
-		"astro": "^2.7.1",
-		"cheerio": "^1.0.0-rc.12",
+		"@astrojs/check": "^0.2.0",
+		"@astrojs/react": "^3.0.2",
+		"@astrojs/tailwind": "^5.0.0",
+		"@commitlint/cli": "^17.7.1",
+		"@commitlint/config-conventional": "^17.7.0",
+		"@types/react": "^18.2.21",
+		"@types/react-dom": "^18.2.7",
+		"astro": "^3.1.0",
+		"cheerio": "1.0.0-rc.12",
 		"husky": "^8.0.3",
-		"lint-staged": "^13.2.2",
-		"patch-package": "^7.0.0",
-		"prettier": "^2.8.8",
-		"prettier-plugin-tailwindcss": "^0.3.0",
+		"lint-staged": "^14.0.1",
+		"patch-package": "^8.0.0",
+		"prettier": "^3.0.3",
+		"prettier-plugin-tailwindcss": "^0.5.4",
 		"react": "^18.2.0",
 		"react-activity-calendar": "^2.0.2",
 		"react-dom": "^18.2.0",
-		"tailwindcss": "^3.3.2",
-		"tsx": "^3.12.7"
+		"tailwindcss": "^3.3.3",
+		"tsx": "^3.12.10",
+		"typescript": "^5.2.2"
 	},
 	"lint-staged": {
 		"*": "npx prettier --write --ignore-path .gitignore --ignore-unknown"
