--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
 	"compilerOptions": {
 		"jsx": "react-jsx",
 		"jsxImportSource": "react",
-		"verbatimModuleSyntax": true
+		"verbatimModuleSyntax": true,
+		"allowJs": true
 	}
 }
