--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"lint-staged": "^14.0.1",
 		"patch-package": "^8.0.0",
 		"prettier": "^3.0.3",
+		"prettier-plugin-astro": "^0.12.0",
 		"prettier-plugin-tailwindcss": "^0.5.4",
 		"react": "^18.2.0",
 		"react-activity-calendar": "^2.0.2",
