--- a/package.json
+++ b/package.json
@@ -12,31 +12,31 @@
 		"build": "astro check && tsc --noEmit && astro build",
 		"preview": "astro preview",
 		"astro": "astro",
-		"prepare": "husky install",
+		"prepare": "husky",
 		"postinstall": "patch-package; npx tsx scripts/extract-styles.ts; npx tsx scripts/stats-fetch.ts"
 	},
 	"dependencies": {
 		"@allindevelopers/prettier-config": "^1.0.0",
-		"@astrojs/check": "^0.3.2",
-		"@astrojs/react": "^3.0.7",
-		"@astrojs/tailwind": "^5.0.3",
-		"@commitlint/cli": "^18.4.3",
-		"@commitlint/config-conventional": "^18.4.3",
-		"@types/react": "^18.2.43",
-		"@types/react-dom": "^18.2.17",
-		"astro": "^4.0.4",
+		"@astrojs/check": "^0.5.6",
+		"@astrojs/react": "^3.0.10",
+		"@astrojs/tailwind": "^5.1.0",
+		"@commitlint/cli": "^19.0.3",
+		"@commitlint/config-conventional": "^19.0.3",
+		"@types/react": "^18.2.60",
+		"@types/react-dom": "^18.2.19",
+		"astro": "^4.4.6",
 		"cheerio": "1.0.0-rc.12",
-		"husky": "^8.0.3",
-		"lint-staged": "^15.2.0",
+		"husky": "^9.0.11",
+		"lint-staged": "^15.2.2",
 		"patch-package": "^8.0.0",
-		"prettier": "^3.1.1",
-		"prettier-plugin-astro": "^0.12.2",
-		"prettier-plugin-tailwindcss": "^0.5.9",
+		"prettier": "^3.2.5",
+		"prettier-plugin-astro": "^0.13.0",
+		"prettier-plugin-tailwindcss": "^0.5.11",
 		"react": "^18.2.0",
-		"react-activity-calendar": "^2.2.0",
+		"react-activity-calendar": "^2.2.7",
 		"react-dom": "^18.2.0",
-		"tailwindcss": "^3.3.6",
-		"tsx": "^4.6.2",
+		"tailwindcss": "^3.4.1",
+		"tsx": "^4.7.1",
 		"typescript": "^5.3.3"
 	},
 	"lint-staged": {
