--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 		"react-activity-calendar": "^2.2.7",
 		"react-dom": "^18.2.0",
 		"tailwindcss": "^3.4.1",
+		"tailwindcss-animated": "^1.0.1",
 		"tsx": "^4.7.1",
 		"typescript": "^5.3.3"
 	},
