--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"@types/react": "^18.2.60",
 		"@types/react-dom": "^18.2.19",
 		"astro": "^4.4.6",
+		"astro-critters": "^2.1.2",
 		"cheerio": "1.0.0-rc.12",
 		"husky": "^9.0.11",
 		"lint-staged": "^15.2.2",
