--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
 		"@astrojs/tailwind": "^5.1.0",
 		"@commitlint/cli": "^19.0.3",
 		"@commitlint/config-conventional": "^19.0.3",
-		"@types/react": "^18.2.60",
-		"@types/react-dom": "^18.2.19",
-		"astro": "^4.4.6",
+		"@types/react": "^18.2.64",
+		"@types/react-dom": "^18.2.20",
+		"astro": "^4.4.13",
 		"astro-critters": "^2.1.2",
 		"cheerio": "1.0.0-rc.12",
 		"husky": "^9.0.11",
@@ -32,7 +32,7 @@
 		"patch-package": "^8.0.0",
 		"prettier": "^3.2.5",
 		"prettier-plugin-astro": "^0.13.0",
-		"prettier-plugin-tailwindcss": "^0.5.11",
+		"prettier-plugin-tailwindcss": "^0.5.12",
 		"react": "^18.2.0",
 		"react-activity-calendar": "^2.2.7",
 		"react-dom": "^18.2.0",
@@ -42,6 +42,7 @@
 		"typescript": "^5.3.3"
 	},
 	"lint-staged": {
+		"scripts/contributions/*.json": "npx tsx scripts/l10n-sort.ts",
 		"*": "npx prettier --write --ignore-path .gitignore --ignore-unknown"
 	},
 	"commitlint": {
