--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,6 @@
 	"extends": "astro/tsconfigs/strictest",
 	"compilerOptions": {
 		"jsx": "react-jsx",
-		"jsxImportSource": "react",
-		"verbatimModuleSyntax": true,
-		"allowJs": true
+		"jsxImportSource": "react"
 	}
 }
