--- a/package.json
+++ b/package.json
@@ -13,33 +13,33 @@
 		"preview": "astro preview",
 		"astro": "astro",
 		"prepare": "husky",
-		"postinstall": "patch-package; npx tsx scripts/extract-styles.ts; npx tsx scripts/stats-fetch.ts"
+		"postinstall": "patch-package; npx tsx scripts/stats-fetch.ts"
 	},
 	"dependencies": {
 		"@allindevelopers/prettier-config": "^1.0.0",
-		"@astrojs/check": "^0.8.0",
-		"@astrojs/react": "^3.6.0",
-		"@astrojs/tailwind": "^5.1.0",
-		"@commitlint/cli": "^19.3.0",
-		"@commitlint/config-conventional": "^19.2.2",
-		"@types/react": "^18.3.3",
-		"@types/react-dom": "^18.3.0",
-		"astro": "^4.11.5",
-		"astro-critters": "^2.1.10",
+		"@astrojs/check": "^0.9.4",
+		"@astrojs/react": "^3.6.2",
+		"@astrojs/tailwind": "^5.1.2",
+		"@commitlint/cli": "^19.5.0",
+		"@commitlint/config-conventional": "^19.5.0",
+		"@playform/inline": "^0.1.0",
+		"@types/react": "^18.3.12",
+		"@types/react-dom": "^18.3.1",
+		"astro": "^4.16.9",
 		"cheerio": "1.0.0-rc.12",
-		"husky": "^9.0.11",
-		"lint-staged": "^15.2.7",
+		"husky": "^9.1.6",
+		"lint-staged": "^15.2.10",
 		"patch-package": "^8.0.0",
-		"prettier": "^3.3.2",
-		"prettier-plugin-astro": "^0.14.0",
-		"prettier-plugin-tailwindcss": "^0.6.5",
+		"prettier": "^3.3.3",
+		"prettier-plugin-astro": "^0.14.1",
+		"prettier-plugin-tailwindcss": "^0.6.8",
 		"react": "^18.3.1",
-		"react-activity-calendar": "^2.2.11",
+		"react-activity-calendar": "^2.7.1",
 		"react-dom": "^18.3.1",
-		"tailwindcss": "^3.4.4",
+		"tailwindcss": "^3.4.14",
 		"tailwindcss-animated": "^1.1.2",
-		"tsx": "^4.16.2",
-		"typescript": "^5.5.3"
+		"tsx": "^4.19.2",
+		"typescript": "^5.6.3"
 	},
 	"lint-staged": {
 		"scripts/contributions/*.json": "npx tsx scripts/l10n-sort.ts",
