--- a/package.json
+++ b/package.json
@@ -18,27 +18,28 @@
 	"dependencies": {
 		"@allindevelopers/prettier-config": "^1.0.0",
 		"@astrojs/check": "^0.9.4",
-		"@astrojs/react": "^3.6.2",
-		"@astrojs/tailwind": "^5.1.2",
-		"@commitlint/cli": "^19.5.0",
-		"@commitlint/config-conventional": "^19.5.0",
-		"@playform/inline": "^0.1.0",
-		"@types/react": "^18.3.12",
-		"@types/react-dom": "^18.3.1",
-		"astro": "^4.16.9",
-		"cheerio": "1.0.0-rc.12",
-		"husky": "^9.1.6",
-		"lint-staged": "^15.2.10",
-		"prettier": "^3.3.3",
+		"@astrojs/react": "^4.2.0",
+		"@astrojs/tailwind": "^6.0.0",
+		"@commitlint/cli": "^19.7.1",
+		"@commitlint/config-conventional": "^19.7.1",
+		"@playform/inline": "^0.1.1",
+		"@types/react": "^19.0.8",
+		"@types/react-dom": "^19.0.3",
+		"astro": "^5.2.6",
+		"cheerio": "^1.0.0",
+		"domhandler": "^5.0.3",
+		"husky": "^9.1.7",
+		"lint-staged": "^15.4.3",
+		"prettier": "^3.5.0",
 		"prettier-plugin-astro": "^0.14.1",
-		"prettier-plugin-tailwindcss": "^0.6.8",
-		"react": "^18.3.1",
-		"react-activity-calendar": "^2.7.1",
-		"react-dom": "^18.3.1",
-		"tailwindcss": "^3.4.14",
+		"prettier-plugin-tailwindcss": "^0.6.11",
+		"react": "^19.0.0",
+		"react-activity-calendar": "^2.7.8",
+		"react-dom": "^19.0.0",
+		"tailwindcss": "^3.4.17",
 		"tailwindcss-animated": "^1.1.2",
 		"tsx": "^4.19.2",
-		"typescript": "^5.6.3"
+		"typescript": "^5.7.3"
 	},
 	"lint-staged": {
 		"scripts/contributions/*.json": "npx tsx scripts/l10n-sort.ts",
